ecmascript/parser/tests/test262-error-references/fail/4ef1d6ca8eceb313.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/4ef1d6ca8eceb313.js:1:28
  |
1 | function* f() { [yield* {a = 0}]; }
  |                            ^

